...
          ),
          floatingActionButton: AnimatedScale(
            scale: _selectedPageIndex == 0 ? 1 : 0,
            duration: const Duration(milliseconds: 250),
            child: _selectedPageIndex == 0
                ? FloatingActionButton(
                    key: const Key('add_task_button'),
                    tooltip: "Add Task",
                    onPressed: () => _addTask(context),
                    child: const Icon(Icons.add),
                  )
                : const SizedBox.shrink(),
          ),
...
