...
                  return null;
                },
              ),
            ),

            ElevatedButton(
              key: const Key('register_button'),
              onPressed: _register,
              child: const Text('Register'),
            ),
          ],
        ),
      ),
...
